@@ -1,90 +1,92 @@
-./libpamc/test/regress/test.libpamc.c
-./libpamc/test/modules/pam_secret.c
+./libpamc/pamc_client.c
 ./libpamc/pamc_converse.c
 ./libpamc/pamc_load.c
-./libpamc/pamc_client.c
-./modules/pam_keyinit/pam_keyinit.c
-./modules/pam_access/pam_access.c
-./modules/pam_localuser/pam_localuser.c
-./modules/pam_debug/pam_debug.c
-./modules/pam_group/pam_group.c
-./modules/pam_issue/pam_issue.c
-./modules/pam_tally/pam_tally.c
-./modules/pam_tally/pam_tally_app.c
-./modules/pam_umask/pam_umask.c
-./modules/pam_wheel/pam_wheel.c
-./modules/pam_xauth/pam_xauth.c
-./modules/pam_filter/upperLOWER/upperLOWER.c
-./modules/pam_filter/pam_filter.c
-./modules/pam_lastlog/pam_lastlog.c
-./modules/pam_mkhomedir/pam_mkhomedir.c
-./modules/pam_limits/pam_limits.c
-./modules/pam_selinux/pam_selinux_check.c
-./modules/pam_selinux/pam_selinux.c
-./modules/pam_permit/pam_permit.c
-./modules/pam_deny/pam_deny.c
-./modules/pam_echo/pam_echo.c
-./modules/pam_exec/pam_exec.c
-./modules/pam_rhosts/pam_rhosts.c
-./modules/pam_rhosts/pam_rhosts_auth.c
-./modules/pam_mail/pam_mail.c
-./modules/pam_motd/pam_motd.c
-./modules/pam_time/pam_time.c
-./modules/pam_unix/md5.c
-./modules/pam_unix/md5_broken.c
-./modules/pam_unix/bigcrypt_main.c
-./modules/pam_unix/md5_good.c
-./modules/pam_unix/bigcrypt.c
-./modules/pam_unix/pam_unix_acct.c
-./modules/pam_unix/unix_chkpwd.c
-./modules/pam_unix/pam_unix_auth.c
-./modules/pam_unix/support.c
-./modules/pam_unix/md5_crypt.c
-./modules/pam_unix/pam_unix_passwd.c
-./modules/pam_unix/pam_unix_sess.c
-./modules/pam_unix/yppasswd_xdr.c
-./modules/pam_warn/pam_warn.c
-./modules/pam_rootok/pam_rootok.c
-./modules/pam_shells/pam_shells.c
-./modules/pam_stress/pam_stress.c
-./modules/pam_cracklib/pam_cracklib.c
-./modules/pam_userdb/pam_userdb.c
-./modules/pam_namespace/pam_namespace.c
-./modules/pam_namespace/md5.c
-./modules/pam_securetty/pam_securetty.c
-./modules/pam_succeed_if/pam_succeed_if.c
-./modules/pam_nologin/pam_nologin.c
-./modules/pam_listfile/pam_listfile.c
-./modules/pam_env/pam_env.c
-./modules/pam_ftp/pam_ftp.c
-./libpam/pam_modutil_cleanup.c
-./libpam/pam_delay.c
-./libpam/pam_handlers.c
-./libpam/pam_auth.c
-./libpam/pam_data.c
-./libpam/pam_end.c
-./libpam/pam_env.c
-./libpam/pam_modutil_ingroup.c
-./libpam/pam_item.c
-./libpam/pam_dynamic.c
-./libpam/pam_misc.c
-./libpam/pam_syslog.c
-./libpam/pam_static.c
-./libpam/pam_dispatch.c
-./libpam/pam_modutil_getpwnam.c
-./libpam/pam_modutil_getpwuid.c
-./libpam/pam_start.c
-./libpam/pam_strerror.c
-./libpam/pam_password.c
-./libpam/pam_modutil_ioloop.c
-./libpam/pam_modutil_getlogin.c
-./libpam/pam_modutil_getspnam.c
-./libpam/pam_session.c
-./libpam/pam_audit.c
-./libpam/pam_prelude.c
-./libpam/pam_account.c
-./libpam/pam_vprompt.c
-./libpam/pam_modutil_getgrgid.c
-./libpam/pam_modutil_getgrnam.c
+./libpamc/test/modules/pam_secret.c
+./libpamc/test/regress/test.libpamc.c
 ./libpam_misc/help_env.c
 ./libpam_misc/misc_conv.c
+./libpam/pam_account.c
+./libpam/pam_audit.c
+./libpam/pam_auth.c
+./libpam/pam_data.c
+./libpam/pam_delay.c
+./libpam/pam_dispatch.c
+./libpam/pam_dynamic.c
+./libpam/pam_end.c
+./libpam/pam_env.c
+./libpam/pam_handlers.c
+./libpam/pam_item.c
+./libpam/pam_misc.c
+./libpam/pam_modutil_cleanup.c
+./libpam/pam_modutil_getgrgid.c
+./libpam/pam_modutil_getgrnam.c
+./libpam/pam_modutil_getlogin.c
+./libpam/pam_modutil_getpwnam.c
+./libpam/pam_modutil_getpwuid.c
+./libpam/pam_modutil_getspnam.c
+./libpam/pam_modutil_ingroup.c
+./libpam/pam_modutil_ioloop.c
+./libpam/pam_password.c
+./libpam/pam_prelude.c
+./libpam/pam_session.c
+./libpam/pam_start.c
+./libpam/pam_static.c
+./libpam/pam_strerror.c
+./libpam/pam_syslog.c
+./libpam/pam_vprompt.c
+./modules/pam_access/pam_access.c
+./modules/pam_cracklib/pam_cracklib.c
+./modules/pam_debug/pam_debug.c
+./modules/pam_deny/pam_deny.c
+./modules/pam_echo/pam_echo.c
+./modules/pam_env/pam_env.c
+./modules/pam_exec/pam_exec.c
+./modules/pam_faildelay/pam_faildelay.c
+./modules/pam_filter/pam_filter.c
+./modules/pam_filter/upperLOWER/upperLOWER.c
+./modules/pam_ftp/pam_ftp.c
+./modules/pam_group/pam_group.c
+./modules/pam_issue/pam_issue.c
+./modules/pam_keyinit/pam_keyinit.c
+./modules/pam_lastlog/pam_lastlog.c
+./modules/pam_limits/pam_limits.c
+./modules/pam_listfile/pam_listfile.c
+./modules/pam_localuser/pam_localuser.c
+./modules/pam_loginuid/pam_loginuid.c
+./modules/pam_mail/pam_mail.c
+./modules/pam_mkhomedir/pam_mkhomedir.c
+./modules/pam_motd/pam_motd.c
+./modules/pam_namespace/md5.c
+./modules/pam_namespace/pam_namespace.c
+./modules/pam_nologin/pam_nologin.c
+./modules/pam_permit/pam_permit.c
+./modules/pam_rhosts/pam_rhosts_auth.c
+./modules/pam_rhosts/pam_rhosts.c
+./modules/pam_rootok/pam_rootok.c
+./modules/pam_securetty/pam_securetty.c
+./modules/pam_selinux/pam_selinux.c
+./modules/pam_selinux/pam_selinux_check.c
+./modules/pam_shells/pam_shells.c
+./modules/pam_stress/pam_stress.c
+./modules/pam_succeed_if/pam_succeed_if.c
+./modules/pam_tally/pam_tally_app.c
+./modules/pam_tally/pam_tally.c
+./modules/pam_time/pam_time.c
+./modules/pam_umask/pam_umask.c
+./modules/pam_unix/bigcrypt.c
+./modules/pam_unix/bigcrypt_main.c
+./modules/pam_unix/md5_broken.c
+./modules/pam_unix/md5.c
+./modules/pam_unix/md5_crypt.c
+./modules/pam_unix/md5_good.c
+./modules/pam_unix/pam_unix_acct.c
+./modules/pam_unix/pam_unix_auth.c
+./modules/pam_unix/pam_unix_passwd.c
+./modules/pam_unix/pam_unix_sess.c
+./modules/pam_unix/support.c
+./modules/pam_unix/unix_chkpwd.c
+./modules/pam_unix/yppasswd_xdr.c
+./modules/pam_userdb/pam_userdb.c
+./modules/pam_warn/pam_warn.c
+./modules/pam_wheel/pam_wheel.c
+./modules/pam_xauth/pam_xauth.c
